<resources>
    <string name="app_name">绿查</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="RememberMe">记住密码</string>
    <string name="Login">登录</string>
    <string name="Register">注册</string>
    <string name="Logo">Logo</string>
    <string name="Phone">Phone</string>
    <string name="ConfirmPassword">确认密码</string>
    <string name="SignUp">注册</string>
    <string name="registrationPage">用户注册</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="cameraBtn">点此拍照</string>
    <string name="initNull">初始空</string>
</resources>
